--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -25,5 +25,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
+      - name: Install package
+        run: pip install e .
+
       - name: Run tests
         run: pytest
